--- a/indexPages/templates/inicio.html
+++ b/indexPages/templates/inicio.html
@@ -10,8 +10,7 @@
 </head>
 <body class="">
     {% include 'bloques_reutilizables/navbar.html'%}
-    <section class="relative h-screen bg-cover bg-no-repeat bg-fixed bg-white/30 backdrop-blur-sm">
-    <div class="absolute inset-0 bg-black/60"></div>
+    <section class="relative h-screen bg-cover bg-no-repeat bg-fixed bg-gradient-to-r from-slate-300 to-slate-500">
     <div class="relative z-10 flex flex-col items-center justify-center min-h-screen text-center px-4">
         <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">Bienvenido a Ana Styles</h1>
         <p class="text-lg md:text-2xl text-white mb-8 max-w-xl">
